automation: Address warnings/errors when building with java 21
- CHANGELOG > Added maint note.
- ExtensionAutomation > Adjust URL/URI handling.
- UrlPresenceTestDialog > Adjust URL/URI handling.

As far as I could see from the related JavaDoc, the same exceptions
should still be thrown (if there's an issue) with the updated code.

Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>